# ida-pro-mcp-plus

./: .gitignore  .mcp.json  INSTALL.md  README.md  README_CN.md  ida-pro-mcp-server.py  pyproject.toml
src/ida_pro_mcp_plus/: __init__.py  __version__.py  ida_scripts.py  ida_scripts_analysis.py  ida_scripts_core.py  ida_scripts_memory.py  ida_scripts_modify.py  ida_scripts_stack.py  ida_scripts_types.py  server.py
