[project]
name = "ida-pro-mcp-plus"
version = "1.0.0"
description = "Enhanced MCP server for IDA Pro with 34+ tools for automated reverse engineering"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "oxygen", email = "304914289@qq.com"}
]
keywords = ["ida-pro", "reverse-engineering", "binary-analysis", "mcp", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "mcp>=1.27.0,<2.0.0",
]

[project.urls]
Repository = "https://github.com/GameSecurityFrontierLib/ida-pro-mcp-plus"
Issues = "https://github.com/GameSecurityFrontierLib/ida-pro-mcp-plus/issues"
Documentation = "https://github.com/GameSecurityFrontierLib/ida-pro-mcp-plus#readme"

[project.scripts]
ida-mcp-plus = "ida_pro_mcp_plus.server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ida_pro_mcp_plus"]

[tool.setuptools.package-data]
ida_pro_mcp_plus = ["*.py"]
